--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  * @Author: maggot-code
  * @Date: 2022-11-21 14:19:59
  * @LastEditors: zhangxin
- * @LastEditTime: 2023-12-07 14:46:16
+ * @LastEditTime: 2024-01-10 17:44:50
  * @Description:
 -->
 <!DOCTYPE html>
@@ -12,6 +12,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="http://152.136.167.65:8888/favicon.ico">
     <style>
         .loader-container {
             width: 100px;
@@ -98,7 +99,7 @@
             overflow: hidden;
         }
     </style>
-    <title>vue3_blog</title>
+    <title>吴艳祖のBlog</title>
 </head>
 
 <body>
